--- a/client/src/pages/CodeEditor/exerciseDisplay.css
+++ b/client/src/pages/CodeEditor/exerciseDisplay.css
@@ -15,7 +15,7 @@
 }
 
 .exercise-header {
-    height: 10%;
+    height: 3vh;
     background-color: #222831;
     color: white;
     padding-left: 1vw;
@@ -46,7 +46,7 @@
 .exercise-text {
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 80%;
+    height: 90%;
     margin-left: 2vw;
     padding-top: 2vh;
     margin-bottom: 2vh;
@@ -70,4 +70,51 @@
     background-color: #494a4d;
     border-radius: 1vw;
     width: 0.5vh;
+}
+
+/* HTML content styling */
+.exercise-paragraph strong,
+.exercise-paragraph b {
+    font-weight: bold;
+}
+
+.exercise-paragraph em,
+.exercise-paragraph i {
+    font-style: italic;
+}
+
+.exercise-paragraph table {
+    border-collapse: collapse;
+    margin: 10px 0;
+    width: 100%;
+}
+
+.exercise-paragraph table th,
+.exercise-paragraph table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.exercise-paragraph table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.exercise-paragraph ul,
+.exercise-paragraph ol {
+    margin: 10px 0;
+    padding-left: 20px;
+}
+
+.exercise-paragraph code {
+    background-color: #f4f4f4;
+    padding: 2px 6px;
+    border-radius: 3px;
+    font-family: monospace;
+}
+
+.exercise-paragraph a {
+    color: #0066cc;
+    text-decoration: underline;
 }
