--- a/client/src/pages/ExerciseEditor/exerciseEditor.css
+++ b/client/src/pages/ExerciseEditor/exerciseEditor.css
@@ -518,3 +518,45 @@
     margin-top: 1.5vh;
     font-family: "Electrolize";
 }
+
+.name-line {
+    display: flex;
+    align-items: center;
+    gap: 0.5vw;
+}
+
+.question-img {
+    height: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+
+.question-img img {
+    max-height: 2vh;
+    cursor: pointer;
+}
+
+.question-img .question-text {
+    visibility: hidden;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 20vw;
+    transform: translateX(-50%);
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s;
+    background-color: #333;
+    color: #fff;
+    padding: 2px 5px;
+    border-radius: 3px;
+    display: inline-block;
+    white-space: pre-line;
+}
+
+.question-img:hover .question-text {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+}
